<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="stMaintenanceUnit" Id="{2842bfa3-ce6a-4532-9bfd-d2e264a4fe8f}">
    <Declaration><![CDATA[TYPE stMaintenanceUnit :
STRUCT
//R//	
		error_code	:INT;
		state				:INT;
		SwapInfo		:INT;
		has_dripped	:BOOL;	//Indicates if automated dripping was executed at least once after dripping_allowed was enabled
		waste_maximum_level:BOOL;//True if the maximum level in the waste container is reached
		Swapping_Done			:BOOL;
		Error						:BOOL;
		white_circuit_content	:INT;
//W//
	Initialize:BOOL;
	Swap:BOOL;
	cycle:INT;   //"0:Cycle A: Swap white ink to storage ;1:Cycle B: Swap storage to white ink"
	SetOff:BOOL;	
	dripping_allowed:BOOL;   //Indicates if the automated dripping is allowed
	
	IntervalTime_W 			:LREAL;//min
	DripTime_W 				:LREAL;//sec
	PurgeTime_W 			:LREAL;//sec
	IntervalTime_C 			:LREAL;//min
	DripTime_C 				:LREAL;//sec
	PurgeTime_C 			   :LREAL;//sec

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>